# osrs-wiki-scraper

./: .gitignore  LICENSE  Pipfile  README.md  action.yml  constants.py  main.py  util.py
.github/workflows/: publish.yml  update.yml
proto/: CMakeLists.txt  equipment.proto  npc_infos.proto  pom.xml  stat_bonuses.proto  weapon_combat_styles.proto  weapons.proto
